--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,11 @@
   flex-direction: row;
   height: 80vh;
   margin: 15px;
-  /* flex-wrap: wrap; */
+}
+
+.diff-options {
+  display: flex;
+  flex-direction: row;
 }
 
 .instructions {
@@ -113,7 +117,7 @@
     #2b86c5 100%
   );
   height: 100%;
-  width: 30%;
+  width: 27%;
   margin: 5px;
   border-radius: 20px;
 }
@@ -156,7 +160,7 @@
     #2b86c5 100%
   );
   height: 100%;
-  width: 70%;
+  width: 75%;
   margin: 5px;
   border-radius: 20px;
 }
@@ -178,13 +182,14 @@
 .file-upload-label svg {
   height: 30px;
   fill: rgb(82, 82, 82);
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
+
 .file-upload-label {
   cursor: pointer;
   background-color: #ddd;
-  padding: 30px 70px;
-  border-radius: 40px;
+  padding: 20px 30px;
+  border-radius: 30px;
   border: 2px dashed rgb(82, 82, 82);
   box-shadow: 0px 0px 200px -50px rgba(0, 0, 0, 0.719);
 }
@@ -255,6 +260,39 @@
 }
 
 /* *************************************** */
+
+.InputContainer {
+  margin-top: 10px;
+  margin-right: 20px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(
+    to bottom,
+    rgb(227, 213, 255),
+    rgb(255, 231, 231)
+  );
+  border-radius: 30px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
+}
+
+.input {
+  width: 190px;
+  height: 40px;
+  border: none;
+  outline: none;
+  caret-color: rgb(255, 81, 0);
+  background-color: rgb(255, 255, 255);
+  border-radius: 30px;
+  padding-left: 15px;
+  letter-spacing: 0.8px;
+  color: rgb(19, 19, 19);
+  font-size: 13.4px;
+}
 
 /* *************************************** */
 
