--- a/src/App.css
+++ b/src/App.css
@@ -148,8 +148,19 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
-  padding: 10%;
+  padding: 5%;
+  overflow: scroll;
+}
+.upload-content-result {
+  background-color: #fdfdfd;
+  margin: 7px;
+  height: 97.7%;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 5%;
   overflow: scroll;
 }
 
@@ -296,6 +307,103 @@
 }
 
 /* *************************************** */
+
+.cyberpunk-checkbox {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #30cfd0;
+  border-radius: 5px;
+  background-color: transparent;
+  display: inline-block;
+  position: relative;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.cyberpunk-checkbox:before {
+  content: "";
+  background-color: #30cfd0;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 10px;
+  height: 10px;
+  border-radius: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+.cyberpunk-checkbox:checked:before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.cyberpunk-checkbox-label {
+  font-size: 18px;
+  color: black;
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  align-items: center;
+}
+/* *************************************** */
+.voice-chat-card {
+  width: 300px;
+  margin: 20px auto;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #ccc;
+  padding: 10px;
+  background-color: #e8e8e8;
+}
+
+.voice-chat-card-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+  color: black;
+  background-color: #333;
+}
+
+.username {
+  margin: 0;
+  font-size: 18px;
+  color: black;
+}
+
+.status {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: green;
+  margin-left: 10px;
+}
+
+.voice-chat-card-body {
+  padding: 10px;
+}
+
+.status-text {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.audio-container {
+  display: flex;
+  align-items: center;
+}
+
+audio {
+  width: 100%;
+}
 
 /* *************************************** */
 
