--- a/src/App.css
+++ b/src/App.css
@@ -657,3 +657,86 @@ audio {
 /* *************************************** */
 
 /* *************************************** */
+
+@media (max-width: 850px) {
+  .upload-contain {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 15px;
+    height: max-content;
+  }
+
+  .instructions {
+    background-image: linear-gradient(
+      225deg,
+      #ff3cac 0%,
+      #784ba0 50%,
+      #2b86c5 100%
+    );
+    height: max-content;
+    width: 100%;
+    border-radius: 20px;
+  }
+
+  .instruct-content {
+    background-color: #fdfdfd;
+    margin: 7px;
+    height: 97.7%;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 15px;
+  }
+  .instruct-content h2 {
+    margin-top: auto;
+  }
+  .instruct-content ul {
+    margin: 10px;
+  }
+  .diff-options {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .upload-content {
+    background-color: #fdfdfd;
+    margin: 7px;
+    height: 97.7%;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 5%;
+  }
+  .upload-content-result {
+    background-color: #fdfdfd;
+    margin: 7px;
+    height: 97%;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding: 5%;
+    overflow: scroll;
+  }
+
+  .upload {
+    background-image: linear-gradient(
+      225deg,
+      #ff3cac 0%,
+      #784ba0 50%,
+      #2b86c5 100%
+    );
+    height: max-content;
+    width: 100%;
+    margin: 5px;
+    border-radius: 20px;
+  }
+}
